add no olm recipes and resources, make resource application more flexible
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env-fusion.properties
+++ b/br-testing-automation/env-fusion.properties
@@ -9,12 +9,12 @@ BR_SERVICE_NAMESPACE="ibm-bnr" #default
 GITHUB_USER= #requires access to https://github.ibm.com/ProjectAbell/cmd-line-install repo
 GITHUB_TOKEN= #requires access to https://github.ibm.com/ProjectAbell/cmd-line-install repo
 STORAGE_CLASS=""
+NO_OLM="false" #change to true if instance is using helm charts for install instead of OLM subscriptions
 
 #variables for just hub setup
 OPERATOR_NS="" 
 SERVICES_NS=""
-TETHERED_NAMESPACE1="" #script assumes two tenant namespaces
-TETHERED_NAMESPACE2=""
+TETHERED_NS=""
 DOCKER_USER= #not currently used but listed as a prereq for some of the Fusion scripts so included for now
 DOCKER_PASS=
 BACKUP_STORAGE_LOCATION_NAME="" #name of s3 storage
