--- a/velero/spectrum-fusion/recipes/dynamic-recipes/core/peripheral-resources.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/core/peripheral-resources.yaml
@@ -36,7 +36,7 @@
 apiVersion: application.isf.ibm.com/v1alpha1
 kind: Application
 metadata:
-  name: cs-core
+  name: cs-core-<parent recipe namespace>
   namespace: <fusion ns>
 spec:
   enableDR: false
@@ -55,7 +55,7 @@ spec:
 apiVersion: data-protection.isf.ibm.com/v1alpha1
 kind: BackupPolicy
 metadata:
-  name: cs-core-backup-policy
+  name: cs-core-backup-policy-<parent recipe namespace>
   namespace: <fusion ns>
 spec:
   backupStorageLocation: <location name>
@@ -72,10 +72,10 @@ spec:
 apiVersion: data-protection.isf.ibm.com/v1alpha1
 kind: PolicyAssignment
 metadata:
-  name: cs-core-policy-assignment
+  name: cs-core-policy-assignment-<parent recipe namespace>
   namespace: <fusion ns>
 spec:
-  application: cs-core
+  application: cs-core-<parent recipe namespace>
   backupPolicy: cs-core-backup-policy
   recipe:
     apiVersion: spp-data-protection.isf.ibm.com/v1alpha1
