update properties file
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/br-testing-automation/env-fusion.properties
+++ b/br-testing-automation/env-fusion.properties
@@ -14,7 +14,7 @@ NO_OLM="false" #change to true if instance is using helm charts for install inst
 #variables for just hub setup
 OPERATOR_NS="" 
 SERVICES_NS=""
-TETHERED_NS=""
+TETHERED_NS="" #comma delimited list
 DOCKER_USER= #not currently used but listed as a prereq for some of the Fusion scripts so included for now
 DOCKER_PASS=
 BACKUP_STORAGE_LOCATION_NAME="" #name of s3 storage
@@ -28,16 +28,15 @@ LSR_NAMESPACE="ibm-ls-reporter" #default
 CPFS_VERSION="4.14" #default
 ZENSERVICE_NAME="" #the name of the deployed zenservice, script assumes at least one is deployed
 DYNAMIC="true" #false uses old recipes
-#below only used if DYNAMIC==true
 IM_ENABLED="true"
 ZEN_ENABLED="true"
 NSS_ENABLED="true"
 
 #label-common-services specific env variables
-# disable labeling of cert manager, licensing, and LSR resources by changing value to 0
-ENABLE_CERT_MANAGER=1
-ENABLE_LICENSING=1
-ENABLE_LSR=1
+# disable labeling of cert manager, licensing, and LSR resources by changing value to false
+ENABLE_CERT_MANAGER="true"
+ENABLE_LICENSING="true"
+ENABLE_LSR="true"
 # Change to 1 to enable private catalog
 ENABLE_PRIVATE_CATALOG=0
 #change to 0 to disable labeling catalog sources in openshift-marketplace
