use standardized name
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/spectrum-fusion/recipes/dynamic-recipes/core/peripheral-resources.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/core/peripheral-resources.yaml
@@ -79,6 +79,6 @@ spec:
   backupPolicy: cs-core-backup-policy-<parent recipe namespace>
   recipe:
     apiVersion: spp-data-protection.isf.ibm.com/v1alpha1
-    name: parent-cpfs-recipe
+    name: cpfs-parent-recipe
     namespace: <parent recipe namespace>
   runNow: false
