--- a/br-testing-automation/env-fusion.properties
+++ b/br-testing-automation/env-fusion.properties
@@ -37,10 +37,10 @@ NSS_ENABLED="true"
 ENABLE_CERT_MANAGER="true"
 ENABLE_LICENSING="true"
 ENABLE_LSR="true"
-# Change to 1 to enable private catalog
-ENABLE_PRIVATE_CATALOG=0
-#change to 0 to disable labeling catalog sources in openshift-marketplace
-ENABLE_DEFAULT_CS=1
+# Change to "true" to enable private catalog
+ENABLE_PRIVATE_CATALOG="false"
+#change to "false" to disable labeling catalog sources in openshift-marketplace
+ENABLE_DEFAULT_CS="true"
 # Add additional CatalogSources separated by comma which are withour ".spec.publisher: IBM"
 # For example: "my-catalog,my-catalog2,my-catalog3"
 ADDITIONAL_SOURCES="" 
