restore cluster scoped crds
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/restore/restore-catalog.yaml
+++ b/velero/restore/restore-catalog.yaml
@@ -13,6 +13,7 @@ spec:
   - restores.velero.io
   - resticrepositories.velero.io
   hooks: {}
+  includeClusterResources: true
   includedNamespaces:
   - '*'
   labelSelector:
