enhance UMS labeling to include configmaps
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/spectrum-fusion/recipes/no-olm/core/child-ums-chart-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/no-olm/core/child-ums-chart-recipe.yaml
@@ -44,6 +44,7 @@ spec:
     - backupRef: ums-resources
       includedResourceTypes:
         - deployments
+        - configmaps
       name: ums-deployment
       type: resource
   hooks:
