--- a/helm-cluster-scoped/templates/cluster-rbac.yaml
+++ b/helm-cluster-scoped/templates/cluster-rbac.yaml
@@ -4,12 +4,16 @@ metadata:
   name: ibm-common-service-operator-{{ .Values.global.operatorNamespace }}
   labels:
     component-id: {{ .Chart.Name }}
-    {{- with .Values.cpfs.labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
-    {{- with .Values.cpfs.clusterLabels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- if .Values.cpfs.labels }}
+      {{- with .Values.cpfs.labels }}
+        {{- toYaml . | nindent 4 }}
+      {{- end }}
+    {{- end}}
+    {{- if .Values.cpfs.clusterLabels }}
+      {{- with .Values.cpfs.clusterLabels }}
+        {{- toYaml . | nindent 4 }}
+      {{- end }}
+    {{- end}}
 rules:   
   - apiGroups: 
       - ""
