--- a/helm-cluster-scoped/templates/crd.yaml
+++ b/helm-cluster-scoped/templates/crd.yaml
@@ -9,12 +9,16 @@ metadata:
     app.kubernetes.io/name: ibm-common-service-operator
     foundationservices.cloudpak.ibm.com: crd
     component-id: {{ .Chart.Name }}
-    {{- with .Values.cpfs.labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
-    {{- with .Values.cpfs.clusterLabels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- if .Values.cpfs.labels }}
+      {{- with .Values.cpfs.labels }}
+        {{- toYaml . | nindent 4 }}
+      {{- end }}
+    {{- end}}
+    {{- if .Values.cpfs.clusterLabels }}
+      {{- with .Values.cpfs.clusterLabels }}
+        {{- toYaml . | nindent 4 }}
+      {{- end }}
+    {{- end}}
   name: commonservices.operator.ibm.com
 spec:
   group: operator.ibm.com
