--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -5,9 +5,11 @@ metadata:
   namespace: {{ .Values.global.operatorNamespace }}
   labels:
     component-id: {{ .Chart.Name }}
-    {{- with .Values.cpfs.labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- if .Values.cpfs.labels }}
+      {{- with .Values.cpfs.labels }}
+        {{- toYaml . | nindent 4 }}
+      {{- end }}
+    {{- end}}
 
 {{- $chartName := .Chart.Name }}
 {{- $operaterNamespace := .Values.global.operatorNamespace }}
