--- a/velero/spectrum-fusion/recipes/non-olm-dynamic-recipes/core/child-ums-chart-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/non-olm-dynamic-recipes/core/child-ums-chart-recipe.yaml
@@ -20,6 +20,7 @@ spec:
         - role
         - rolebinding
         - deployments
+        - ibmusagemeterings.operator.ibm.com
       labelSelector: foundationservices.cloudpak.ibm.com=ums
       name: ums-resources
       type: resource
@@ -32,6 +33,11 @@ spec:
       type: resource
     - backupRef: ums-resources
       includedResourceTypes:
+        - ibmusagemeterings.operator.ibm.com
+      name: ums-cr
+      type: resource
+    - backupRef: ums-resources
+      includedResourceTypes:
         - deployments
       name: ums-deployment
       type: resource
@@ -40,13 +46,13 @@ spec:
         - condition: '{$.status.phase} == {"Running"}'
           name: podReady
           onError: fail
-          timeout: 600
+          timeout: 300
       labelSelector: app.kubernetes.io/name=ibm-usage-metering
       name: ums-instance-check
-      namespace: <operator_ns>
+      namespace: <service namespace> # namespace where the UMS instance CR is deployed
       onError: fail
       selectResource: pod
-      timeout: 600
+      timeout: 300
       type: check
   workflows:
     - name: chart-backup
@@ -59,5 +65,6 @@ spec:
       sequence:
         - group: ums-crd
         - group: ums-rbac-resources
+        - group: ums-cr
         - group: ums-deployment
         - hook: ums-instance-check/podReady
