--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -19,7 +19,6 @@ metadata:
 {{- if .Values.global.instanceNamespace }}
   {{- $namespaces = append $namespaces .Values.global.instanceNamespace }}
 {{- end }}
-{{- $labels := .Values.cpfs.labels }}
 {{- range $i := $namespaces }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -29,9 +28,11 @@ metadata:
   namespace: {{ $i }}
   labels:
     component-id: {{ $chartName }}
-    {{- with $labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- if .Values.cpfs.labels }}
+      {{- with .Values.cpfs.labels }}
+        {{- toYaml . | nindent 4 }}
+      {{- end }}
+    {{- end}}
 roleRef: 
   kind: Role
   apiGroup: rbac.authorization.k8s.io
@@ -49,9 +50,11 @@ metadata:
   namespace: {{ $i }}
   labels:
     component-id: {{ $chartName }}
-    {{- with $labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- if .Values.cpfs.labels }}
+      {{- with .Values.cpfs.labels }}
+        {{- toYaml . | nindent 4 }}
+      {{- end }}
+    {{- end}}
 rules:   
   - apiGroups: 
       - ""
