debugging within loop
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -28,8 +28,8 @@ metadata:
   namespace: {{ $i }}
   labels:
     component-id: {{ $chartName }}
-    {{- if .Values.cpfs.labels }}
-      {{- with .Values.cpfs.labels }}
+    {{- if $.Values.cpfs.labels }}
+      {{- with $.Values.cpfs.labels }}
         {{- toYaml . | nindent 4 }}
       {{- end }}
     {{- end}}
@@ -50,8 +50,8 @@ metadata:
   namespace: {{ $i }}
   labels:
     component-id: {{ $chartName }}
-    {{- if .Values.cpfs.labels }}
-      {{- with .Values.cpfs.labels }}
+    {{- if $.Values.cpfs.labels }}
+      {{- with $.Values.cpfs.labels }}
         {{- toYaml . | nindent 4 }}
       {{- end }}
     {{- end}}
