add required permission for BTS service
Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1679,3 +1679,61 @@ rules:
       - secretproviderclasses
     apiGroups:
       - secrets-store.csi.x-k8s.io
+  - verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+    apiGroups:
+      - ''
+    resources:
+      - leases
+  - verbs:
+      - create
+      - patch
+      - update
+    apiGroups:
+      - certmanager.k8s.io
+    resources:
+      - certificaterequests
+      - challenges
+      - orders
+  - verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+    apiGroups:
+      - operator.ibm.com
+    resources:
+      - businessteamsservices
+  - verbs:
+      - update
+    apiGroups:
+      - operator.ibm.com
+    resources:
+      - businessteamsservices/finalizers
+  - verbs:
+      - get
+      - patch
+      - update
+    apiGroups:
+      - operator.ibm.com
+    resources:
+      - businessteamsservices/status
+  - verbs:
+      - create
+      - delete
+      - patch
+      - update
+      - watch
+    apiGroups:
+      - storage.k8s.io
+    resources:
+      - storageclasses
