add namespace scope role into helm chart
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -61,8 +61,13 @@ rules:
     resources: 
       - configmaps
     verbs: 
+      - create
       - delete
+      - get
+      - list
       - patch
+      - update
+      - watch
   - apiGroups: 
       - operator.ibm.com
     resources: 
