--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -329,6 +329,13 @@ spec:
                 - patch
                 - update
                 - watch
+            - apiGroups:
+              - packages.operators.coreos.com
+              resources:
+              - packagemanifests
+              verbs:
+              - get
+              - list
           serviceAccountName: ibm-common-service-operator
       deployments:
         - label:
