--- a/cp3-networkpolicy/egress/license-service/bedrock-egress-ibm-licensing-operator.yaml
+++ b/cp3-networkpolicy/egress/license-service/bedrock-egress-ibm-licensing-operator.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "licNamespace"
   labels:
     component: cpfs3
+    service: licensing
 spec:
   podSelector:
     matchLabels:
