--- a/cp3-networkpolicy/egress/opensearch/bedrock-egress-ibm-opensearch-operator.yaml
+++ b/cp3-networkpolicy/egress/opensearch/bedrock-egress-ibm-opensearch-operator.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "opNamespace"
   labels:
     component: cpfs3
+    service: opensearch
 spec:
   podSelector: 
     matchLabels:
