--- a/cp3-networkpolicy/egress/zen/zen-egress-edb-postgres.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-edb-postgres.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "zenNamespace"
   labels:
     component: cpfs3
+    service: edb
 spec:
   podSelector:
     matchExpressions:
