--- a/cp3-networkpolicy/egress/zen/zen-egress-zen-watchdog-create-tables-job.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-zen-watchdog-create-tables-job.yaml
@@ -3,6 +3,7 @@ kind: NetworkPolicy
 metadata:
   labels:
     component: cpfs3
+    service: zen
   name: egress-zen-watchdog-create-tables-job
   namespace: "zenNamespace"
 spec:
