--- a/cp3-networkpolicy/ingress/services/access-to-platform-identity-provider.yaml
+++ b/cp3-networkpolicy/ingress/services/access-to-platform-identity-provider.yaml
@@ -3,6 +3,7 @@ kind: NetworkPolicy
 metadata:
   labels:
     component: cpfs3
+    service: iam
   name: access-to-platform-identity-provider
   namespace: "csNamespace"
 spec:
