--- a/cp3-networkpolicy/egress/cert-manager/bedrock-egress-ibm-cert-manager-operator.yaml
+++ b/cp3-networkpolicy/egress/cert-manager/bedrock-egress-ibm-cert-manager-operator.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "certNamespace"
   labels:
     component: cpfs3
+    service: ibm-cert-manager
 spec:
   egress:
     - ports:
