--- a/cp3-networkpolicy/egress/services/bedrock-egress-edb-postgres.yaml
+++ b/cp3-networkpolicy/egress/services/bedrock-egress-edb-postgres.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "csNamespace"
   labels:
     component: cpfs3
+    service: edb
 spec:
   podSelector:
     matchExpressions:
