--- a/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operand.yaml
+++ b/cp3-networkpolicy/ingress/flink/bedrock-access-to-ibm-flink-operand.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "flinkNamespace"
   labels:
     component: cpfs3
+    service: flink
 spec:
   podSelector: 
     matchLabels:
