--- a/cp3-networkpolicy/ingress/license-service/bedrock-access-to-license-service.yaml
+++ b/cp3-networkpolicy/ingress/license-service/bedrock-access-to-license-service.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "licNamespace"
   labels:
     component: cpfs3
+    service: licensing
 spec:
   podSelector:
     matchLabels:
