--- a/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
+++ b/cp3-networkpolicy/ingress/opensearch/bedrock-access-to-ibm-opensearch-operator.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "opNamespace"
   labels:
     component: cpfs3
+    service: opensearch
 spec:
   podSelector: 
     matchLabels:
