--- a/cp3-networkpolicy/ingress/zen/access-to-edb-postgres.yaml
+++ b/cp3-networkpolicy/ingress/zen/access-to-edb-postgres.yaml
@@ -3,6 +3,7 @@ kind: NetworkPolicy
 metadata:
   labels:
     component: cpfs3
+    service: zen
   name: access-to-edb-postgres
   namespace: "zenNamespace"
 spec:
