update label name
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3-networkpolicy/ingress/cert-manager/bedrock-access-to-cert-manager-webhook.yaml
+++ b/cp3-networkpolicy/ingress/cert-manager/bedrock-access-to-cert-manager-webhook.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: "certNamespace"
   labels:
     component: cpfs3
-    service: ibm-cert-manager
+    service: cert-manager
 spec:
   podSelector:
     matchLabels:
