--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -71,6 +71,7 @@ rules:
   - patch
   - update
   - watch
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -273,3 +274,10 @@ rules:
   - get
   - list
   - update
+- apiGroups:
+  - packages.operators.coreos.com
+  resources:
+  - packagemanifests
+  verbs:
+  - get
+  - list
