--- a/br-testing-automation/env-fusion.properties
+++ b/br-testing-automation/env-fusion.properties
@@ -49,10 +49,10 @@ CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
 
 #variables for just spoke setup
 #these values can be found by copying the login token and server values for an openshift cluster
-HUB_USERNAME=
+HUB_USERNAME="kubeadmin"
 HUB_PASSWORD=
 HUB_SERVER=
-SPOKE_USERNAME=
+SPOKE_USERNAME="kubeadmin"
 SPOKE_PASSWORD=
 SPOKE_SERVER=
 
