--- a/.pipeline-config-ci.yaml
+++ b/.pipeline-config-ci.yaml
@@ -1,9 +1,9 @@
 version: '2'
 
-# PR Pipeline: pr-code-checks, code-pr-finish
+# CI Pipeline: code-checks, code-build, deploy-checks, deploy-release
 tasks:
-  pr-code-checks:
-    runtimeClassName: x86-xlarge
+  code-checks:
+    # code-checks includes five configurable steps: setup, detect-secrets, compliance-checks, peer-review, static-scan
     include:
       - dind
     steps:
@@ -13,6 +13,20 @@ tasks:
         when: 'true'
         include:
           - docker-socket
+      - name: compliance-checks
+        when: 'false'
+      - name: peer-review
+        when: 'false'
+      - name: static-scan
+        when: 'false'
+
+  code-build:
+    include:
+      - dind
+    # code-build includes five configurable steps: setup, unit-test, build-artifact, sign-artifact, scan-artifact
+    steps:
+      - name: setup
+        when: 'false'
       - name: unit-test
         include:
           - docker-socket
@@ -31,22 +45,24 @@ tasks:
           yum install -y golang
           echo "Skip unit tests for now"
           # make test
-      - name: compliance-checks
+      - name: build-artifact
+        when: 'false'
+      - name: sign-artifact
+        when: 'false'
+      - name: scan-artifact
         when: 'false'
 
-  pr-code-checks-amd64:
-    from: pr-code-checks
+  code-build-amd64:
+    from: code-build
     runtimeClassName: x86-xlarge
     include:
       - dind
     steps:
-      - name: checks-setup
+      - name: setup
         when: 'false'
-      - name: detect-secrets
-        when: 'true'
-        include:
-          - docker-socket
       - name: unit-test
+        when: 'false'
+      - name: build-artifact
         include:
           - docker-socket
           - dind
@@ -70,20 +86,22 @@ tasks:
           yum install -y golang
           make config-docker
           make docker-build-push-prod
-      - name: compliance-checks
+      - name: sign-artifact
+        when: 'false'
+      - name: scan-artifact
         when: 'false'
 
-  pr-code-checks-ppc:
-    from: pr-code-checks
+  code-build-ppc64le:
+    from: code-build
     runtimeClassName: x86-xlarge
     include:
       - dind
     steps:
-      - name: checks-setup
-        when: 'false'
-      - name: detect-secrets
+      - name: setup
         when: 'false'
       - name: unit-test
+        when: 'false'
+      - name: build-artifact
         include:
           - docker-socket
           - dind
@@ -107,20 +125,22 @@ tasks:
           yum install -y golang
           make config-docker
           make docker-build-push-prod
-      - name: compliance-checks
+      - name: sign-artifact
+        when: 'false'
+      - name: scan-artifact
         when: 'false'
 
-  pr-code-checks-s390:
-    from: pr-code-checks
+  code-build-s390:
+    from: code-build
     runtimeClassName: x86-xlarge
     include:
       - dind
     steps:
-      - name: checks-setup
-        when: 'false'
-      - name: detect-secrets
+      - name: setup
         when: 'false'
       - name: unit-test
+        when: 'false'
+      - name: build-artifact
         include:
           - docker-socket
           - dind
@@ -144,27 +164,26 @@ tasks:
           yum install -y golang
           make config-docker
           make docker-build-push-prod
-      - name: compliance-checks
+      - name: sign-artifact
+        when: 'false'
+      - name: scan-artifact
         when: 'false'
 
-  pr-code-checks-multiarch:
-    from: pr-code-checks
+  code-build-multiarch:
+    from: code-build
     runtimeClassName: x86-xlarge
     runAfter: 
-      - pr-code-checks-amd64
-      - pr-code-checks-ppc
-      - pr-code-checks-s390
+      - code-build-amd64
+      - code-build-ppc
+      - code-build-s390
     include:
       - dind
     steps:
-      - name: checks-setup
+      - name: setup
         when: 'false'
-      - name: detect-secrets
-        when: 'true'
-        include:
-          - docker-socket
-          - dind
       - name: unit-test
+        when: 'false'
+      - name: build-artifact
         include:
           - docker-socket
           - dind
@@ -187,5 +206,7 @@ tasks:
           yum install -y golang
           make config-docker
           make multiarch-image
-      - name: compliance-checks
+      - name: sign-artifact
+        when: 'false'
+      - name: scan-artifact
         when: 'false'
