--- a/.pipeline-config-ci.yaml
+++ b/.pipeline-config-ci.yaml
@@ -32,7 +32,7 @@ tasks:
           - docker-socket
           - dind
         image: icr.io/continuous-delivery/base-images/base:v1.21.0
-        displayName: Unit test for user mgmt operator
+        displayName: Unit test for commonservice operator
         script: |
           #!/usr/bin/env bash
           if [[ "$PIPELINE_DEBUG" == 1 ]]; then
@@ -67,7 +67,7 @@ tasks:
           - docker-socket
           - dind
         image: icr.io/continuous-delivery/base-images/base:v1.21.0
-        displayName: Build amd64 user mgmt operator image
+        displayName: Build amd64 commonservice operator image
         script: |
           #!/usr/bin/env bash
           if [[ "$PIPELINE_DEBUG" == 1 ]]; then
@@ -84,8 +84,7 @@ tasks:
           export LOCAL_ARCH=amd64
           echo "Installing Go dependencies"
           yum install -y golang
-          make config-docker
-          make docker-build-push-prod
+          make build-push-image
       - name: sign-artifact
         when: 'false'
       - name: scan-artifact
@@ -106,7 +105,7 @@ tasks:
           - docker-socket
           - dind
         image: icr.io/continuous-delivery/base-images/base:v1.21.0
-        displayName: Build ppc user mgmt operator image
+        displayName: Build ppc commonservice operator image
         script: |
           #!/usr/bin/env bash
           if [[ "$PIPELINE_DEBUG" == 1 ]]; then
@@ -123,8 +122,7 @@ tasks:
           export LOCAL_ARCH=ppc64le
           echo "Installing Go dependencies"
           yum install -y golang
-          make config-docker
-          make docker-build-push-prod
+          make build-push-image
       - name: sign-artifact
         when: 'false'
       - name: scan-artifact
@@ -145,7 +143,7 @@ tasks:
           - docker-socket
           - dind
         image: icr.io/continuous-delivery/base-images/base:v1.21.0
-        displayName: Build s390 user mgmt operator image
+        displayName: Build s390 commonservice operator image
         script: |
           #!/usr/bin/env bash
           if [[ "$PIPELINE_DEBUG" == 1 ]]; then
@@ -162,8 +160,7 @@ tasks:
           export LOCAL_ARCH=s390x
           echo "Installing Go dependencies"
           yum install -y golang
-          make config-docker
-          make docker-build-push-prod
+          make build-push-image
       - name: sign-artifact
         when: 'false'
       - name: scan-artifact
@@ -188,7 +185,7 @@ tasks:
           - docker-socket
           - dind
         image: icr.io/continuous-delivery/base-images/base:v1.21.0
-        displayName: Build multiarch user mgmt operator image
+        displayName: Build multiarch commonservice operator image
         script: |
           #!/usr/bin/env bash
           if [[ "$PIPELINE_DEBUG" == 1 ]]; then
