--- a/.pipeline-config-ci.yaml
+++ b/.pipeline-config-ci.yaml
@@ -10,7 +10,7 @@ tasks:
       - name: checks-setup
         when: 'false'
       - name: detect-secrets
-        when: 'true'
+        when: 'false'
         include:
           - docker-socket
       - name: compliance-checks
