Add new option to skip some networkpolicys (#2652)
* add --skipIAM and --skipZen option

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update message

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update label name

Signed-off-by: Allen Li <liyuchen223@gmail.com>

---------

Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3-networkpolicy/ingress/cert-manager/bedrock-access-to-cert-manager-webhook.yaml
+++ b/cp3-networkpolicy/ingress/cert-manager/bedrock-access-to-cert-manager-webhook.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: "certNamespace"
   labels:
     component: cpfs3
+    service: cert-manager
 spec:
   podSelector:
     matchLabels:
