ODLM channel check enhancement (#2633)
* ODLM channel enhancement

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* add permission to packagemanifests

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update log info

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update csv

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* fix get catalogsource issue

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update ODLM channel

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update rbac in helm chart

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update packageManifest namespace

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update controller-tools-version

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update kustomize version

Signed-off-by: Allen Li <liyuchen223@gmail.com>

---------

Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -522,6 +522,13 @@ spec:
                 - patch
                 - update
             - apiGroups:
+                - packages.operators.coreos.com
+              resources:
+                - packagemanifests
+              verbs:
+                - get
+                - list
+            - apiGroups:
                 - certmanager.k8s.io
               resources:
                 - certificates
