--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -23,7 +23,7 @@ metadata:
     capabilities: Seamless Upgrades
     cloudPakThemesVersion: styles4100.css
     containerImage: icr.io/cpopen/common-service-operator:4.16.0
-    createdAt: "2025-05-16T03:15:01Z"
+    createdAt: "2025-10-22T16:14:35Z"
     description: The IBM Cloud Pak foundational services operator is used to deploy IBM foundational services.
     features.operators.openshift.io/disconnected: "true"
     features.operators.openshift.io/fips-compliant: "true"
@@ -310,6 +310,8 @@ spec:
               verbs:
                 - get
                 - delete
+                - list
+                - watch
           serviceAccountName: ibm-common-service-operator
       deployments:
         - label:
