--- a/helm-cluster-scoped/templates/cluster-rbac.yaml
+++ b/helm-cluster-scoped/templates/cluster-rbac.yaml
@@ -69,6 +69,8 @@ rules:
     verbs: 
       - get
       - delete
+      - list
+      - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
