Update oc login method for BR automation scripts (#2639)
* update cluster login credential

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update login method

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* add default username

Signed-off-by: Allen Li <liyuchen223@gmail.com>

---------

Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/br-testing-automation/env-fusion.properties
+++ b/br-testing-automation/env-fusion.properties
@@ -49,9 +49,11 @@ CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
 
 #variables for just spoke setup
 #these values can be found by copying the login token and server values for an openshift cluster
-HUB_OC_TOKEN=
+HUB_USERNAME="kubeadmin"
+HUB_PASSWORD=
 HUB_SERVER=
-SPOKE_OC_TOKEN=
+SPOKE_USERNAME="kubeadmin"
+SPOKE_PASSWORD=
 SPOKE_SERVER=
 
 # ==============================================================================
