--- a/br-testing-automation/env-oadp.properties
+++ b/br-testing-automation/env-oadp.properties
@@ -56,8 +56,10 @@ CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
 # ==============================================================================
 # variables for auto-br script
 BACKUP_CLU_SERVER=""
-BACKUP_CLU_TOKEN=""
+BACKUP_CLU_USERNAME="kubeadmin"
+BACKUP_CLU_PASSWORD=""
 RESTORE_CLU_SERVER=""
-RESTORE_CLU_TOKEN=""
+RESTORE_CLU_USERNAME="kubeadmin"
+RESTORE_CLU_PASSWORD=""
 TARGET_CLUSTER_TYPE="same"  # determines if restoring to the same cluster or to a different cluster. Values are "same" and "diff"
 BACKUP_NAME="" # always necessary for either backup or restore
