--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -237,6 +237,7 @@ rules:
       - watch
   - apiGroups:
       - postgresql.k8s.enterprisedb.io
+      - postgresql.cnpg.ibm.com
     resources:
       - clusters
     verbs:
