update cnpg related fields to ensure cs db is specified and that cnpg is included wherever edb is
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -612,6 +612,7 @@ spec:
                 - watch
             - apiGroups:
                 - postgresql.k8s.enterprisedb.io
+                - postgresql.cnpg.ibm.com
               resources:
                 - clusters
               verbs:
