--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -275,6 +275,7 @@ rules:
   - watch
 - apiGroups:
   - postgresql.k8s.enterprisedb.io
+  - postgresql.cnpg.ibm.com
   resources:
   - clusters
   verbs:
