--- a/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/ibm-common-service-operator.clusterserviceversion.yaml
@@ -607,6 +607,7 @@ spec:
                 - watch
             - apiGroups:
                 - postgresql.k8s.enterprisedb.io
+                - postgresql.cnpg.ibm.com
               resources:
                 - clusters
               verbs:
