add new permission for zen
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1737,3 +1737,33 @@ rules:
       - storage.k8s.io
     resources:
       - storageclasses
+  - verbs:
+    - get
+    - list
+    - watch
+    - update
+    - patch
+    - create
+    - delete
+    apiGroups:
+    - cluster.ibm-cpd-mcscheduler.ibm.com
+    resources:
+    - distributionrule
+    - distributionrules
+    - distributionruledecision
+    - distributionruledecisions
+    - physicallocation
+    - physicallocations
+  - verbs:
+    - get
+    - list
+    - watch
+    - update
+    - patch
+    - create
+    - delete
+    apiGroups:
+    - work.ibm-cpd-mcscheduler.ibm.com
+    resources:
+    - remotekuberestemplate
+    - remotekuberestemplates
