add permission for cnpg
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1473,6 +1473,7 @@ rules:
       - watch
     apiGroups:
       - postgresql.k8s.enterprisedb.io
+      - postgresql.cnpg.ibm.com
     resources:
       - clusters
   - verbs:
