--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1473,6 +1473,7 @@ rules:
       - watch
     apiGroups:
       - postgresql.k8s.enterprisedb.io
+      - postgresql.cnpg.ibm.com
     resources:
       - clusters
   - verbs:
@@ -1738,32 +1739,32 @@ rules:
     resources:
       - storageclasses
   - verbs:
-    - get
-    - list
-    - watch
-    - update
-    - patch
-    - create
-    - delete
+      - get
+      - list
+      - watch
+      - update
+      - patch
+      - create
+      - delete
     apiGroups:
-    - cluster.ibm-cpd-mcscheduler.ibm.com
+      - cluster.ibm-cpd-mcscheduler.ibm.com
     resources:
-    - distributionrule
-    - distributionrules
-    - distributionruledecision
-    - distributionruledecisions
-    - physicallocation
-    - physicallocations
+      - distributionrule
+      - distributionrules
+      - distributionruledecision
+      - distributionruledecisions
+      - physicallocation
+      - physicallocations
   - verbs:
-    - get
-    - list
-    - watch
-    - update
-    - patch
-    - create
-    - delete
+      - get
+      - list
+      - watch
+      - update
+      - patch
+      - create
+      - delete
     apiGroups:
-    - work.ibm-cpd-mcscheduler.ibm.com
+      - work.ibm-cpd-mcscheduler.ibm.com
     resources:
-    - remotekuberestemplate
-    - remotekuberestemplates
+      - remotekuberestemplate
+      - remotekuberestemplates
