--- a/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
+++ b/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
@@ -92,12 +92,12 @@ data:
             
             oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- psql -U postgres -c "\list" -c "\dn" -c "\du"
             info "Beginning restore of im database..."
-            oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- pg_restore -U postgres --dbname im --format=c --clean --exit-on-error -v /run/cs-db_backup/cs-db_im_backup.dump
+            oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- pg_restore -U postgres --dbname im --format=c --clean --if-exists --exit-on-error -v /run/cs-db_backup/cs-db_im_backup.dump
             info "Beginning restore of zen database..."
-            oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- pg_restore -U postgres --dbname zen --format=c --clean --exit-on-error -v /run/cs-db_backup/cs-db_zen_backup.dump
+            oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- pg_restore -U postgres --dbname zen --format=c --clean --if-exists --exit-on-error -v /run/cs-db_backup/cs-db_zen_backup.dump
             if [[ $ACCOUNT_IAM != "False" ]]; then
                 info "Beginning restore of account_iam database..."
-                oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- pg_restore -U postgres --dbname account_iam --format=c --clean --exit-on-error -v /run/cs-db_backup/cs-db_account_iam_backup.dump        
+                oc -n $CSDB_NAMESPACE exec -t $CNPG_PRIMARY_POD -c postgres -- pg_restore -U postgres --dbname account_iam --format=c --clean --if-exists --exit-on-error -v /run/cs-db_backup/cs-db_account_iam_backup.dump        
                 
                 # Update IDP configuration with actual cluster domain
                 update_idp_config
@@ -117,19 +117,34 @@ data:
         rm -f /tmp/oidc-client-registration.yaml
         wait_for_job "oidc-client-registration"
 
-        info "🔄 Rerunning MCSP IM config job..."
-        oc -n $CSDB_NAMESPACE get job mcsp-im-config-job -o yaml > /tmp/mcsp-im-config-job.yaml 2>/dev/null || {
-            info "🔍 MCSP IM config job not found, skipping..."
-        }
-        if [[ -f /tmp/mcsp-im-config-job.yaml ]]; then
-            oc -n $CSDB_NAMESPACE delete job mcsp-im-config-job
-            yq -i 'del(.metadata.creationTimestamp) | del(.metadata.managedFields) | del(.metadata.resourceVersion) | del(.metadata.uid) | del(.spec.selector) | del(.spec.template.metadata.labels) | del(.status)' /tmp/mcsp-im-config-job.yaml || error "Failed to remove metadata fields from temp mcsp-im-config-job yaml for namespace ${CSDB_NAMESPACE}."
-            info "⏸️ Wait for previous MCSP IM config job to delete..."
-            sleep 10
-            oc apply -f /tmp/mcsp-im-config-job.yaml
-            rm -f /tmp/mcsp-im-config-job.yaml
-            wait_for_job "mcsp-im-config-job"
-        fi
+        if [[ $ACCOUNT_IAM != "False" ]]; then
+            info "🔄 Rerunning account-iam-db-migration job..."
+            oc -n $CSDB_NAMESPACE get job account-iam-db-migration-job -o yaml > /tmp/account-iam-db-migration-job.yaml 2>/dev/null || {
+                info "🔍 account-iam-db-migration job not found, skipping..."
+            }
+            if [[ -f /tmp/account-iam-db-migration-job.yaml ]]; then
+                oc -n $CSDB_NAMESPACE delete job account-iam-db-migration-job
+                yq -i 'del(.metadata.creationTimestamp) | del(.metadata.managedFields) | del(.metadata.resourceVersion) | del(.metadata.uid) | del(.spec.selector) | del(.spec.template.metadata.labels) | del(.status)' /tmp/account-iam-db-migration-job.yaml || error "Failed to remove metadata fields from temp account-iam-db-migration-job yaml for namespace ${CSDB_NAMESPACE}."
+                info "⏸️ Wait for previous account-iam-db-migration job to delete..."
+                sleep 10
+                oc apply -f /tmp/account-iam-db-migration-job.yaml
+                rm -f /tmp/account-iam-db-migration-job.yaml
+                wait_for_job "account-iam-db-migration-job"
+            fi
+            info "🔄 Rerunning MCSP IM config job..."
+            oc -n $CSDB_NAMESPACE get job mcsp-im-config-job -o yaml > /tmp/mcsp-im-config-job.yaml 2>/dev/null || {
+                info "🔍 MCSP IM config job not found, skipping..."
+            }
+            if [[ -f /tmp/mcsp-im-config-job.yaml ]]; then
+                oc -n $CSDB_NAMESPACE delete job mcsp-im-config-job
+                yq -i 'del(.metadata.creationTimestamp) | del(.metadata.managedFields) | del(.metadata.resourceVersion) | del(.metadata.uid) | del(.spec.selector) | del(.spec.template.metadata.labels) | del(.status)' /tmp/mcsp-im-config-job.yaml || error "Failed to remove metadata fields from temp mcsp-im-config-job yaml for namespace ${CSDB_NAMESPACE}."
+                info "⏸️ Wait for previous MCSP IM config job to delete..."
+                sleep 10
+                oc apply -f /tmp/mcsp-im-config-job.yaml
+                rm -f /tmp/mcsp-im-config-job.yaml
+                wait_for_job "mcsp-im-config-job"
+            fi
+        fi  
 
         
     }
