--- a/.pipeline-config-ci.yaml
+++ b/.pipeline-config-ci.yaml
@@ -10,7 +10,7 @@ tasks:
       - name: checks-setup
         when: 'false'
       - name: detect-secrets
-        when: 'false'
+        when: 'true'
         include:
           - docker-socket
       - name: compliance-checks
@@ -171,7 +171,7 @@ tasks:
     runtimeClassName: x86-xlarge
     runAfter: 
       - code-build-amd64
-      - code-build-ppc
+      - code-build-ppc64le
       - code-build-s390
     include:
       - dind
