--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1476,6 +1476,7 @@ rules:
       - postgresql.cnpg.ibm.com
     resources:
       - clusters
+      - clusters/status
   - verbs:
       - create
       - delete
