remove nss role for ODLM
Signed-off-by: Sophie Shen <syc_libra@live.cn>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1489,9 +1489,16 @@ rules:
       - ''
     resources:
       - configmaps
-      - namespaces
       - secrets
       - services
+  - verbs:
+      - get
+      - list
+      - watch
+    apiGroups:
+      - ""
+    resources:
+      - namespaces
   - verbs:
       - create
       - delete
