Reduce namespace permission from ODLM (#2693)
* remove nss role for ODLM

Signed-off-by: Sophie Shen <syc_libra@live.cn>

* create min rbac for sc2

Signed-off-by: Sophie Shen <syc_libra@live.cn>

* remove monitoring for commonUI

Signed-off-by: Sophie Shen <syc_libra@live.cn>

---------

Signed-off-by: Sophie Shen <syc_libra@live.cn>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role-sc2.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role-sc2.yaml
@@ -480,6 +480,13 @@ rules:
     resources:
       - daemonsets
   - verbs:
+      - get
+      - create
+    apiGroups:
+      - monitoring.coreos.com
+    resources:
+      - servicemonitors
+  - verbs:
       - update
     apiGroups:
       - apps
@@ -1482,16 +1489,9 @@ rules:
       - ''
     resources:
       - configmaps
+      - namespaces
       - secrets
       - services
-  - verbs:
-      - get
-      - list
-      - watch
-    apiGroups:
-      - ""
-    resources:
-      - namespaces
   - verbs:
       - create
       - delete
